@@ -1,5 +1,7 @@
 Changes in stable release 2.4.5 (not released yet)
 
+* Fixed moving windows between pages with the keyboard.
+
 Changes in stable release 2.4.4 (16-Dec-2001)
 
 * Minor title drawing fixes.
