@@ -1,3 +1,13 @@
+2001-12-17  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/functions.c (DeferExecution):
+	* fvwm/move_resize.c (moveLoop):
+	* libs/Target.c (fvwmlib_keyboard_shortcuts):
+	* fvwm/misc.c (Keyboard_shortcuts):
+	modified keyboard shortcut functions so that it is possible to move
+	windows with the keyboard even if the border is hit.  does not work
+	very nicely with paging
+
 2001-12-16  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* configure.in:
